# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml  test_sql.sql
src/check_select_star/: check_select_star.py  cli.py
src/your_pkg/: check_select_star.py  cli.py
