[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "check_select_star"
version = "0.1.0"
authors = [{name = "Alison Peebles Madigan", email = "aapeebles@gmail.com"},]
description = "TODO"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",  # update later
    "Programming Language :: Python"
]
urls.Homepage = "https://example.com"
urls.Documentation = "https://example.com/docs"

dependencies = ["sqlparse"]
requires-python = ">=3.12"
optional-dependencies.dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "pytest",  # remember to add tests for your hook
]

# TODO: update `your-script-name` and the path
scripts.check_select_star = "check_select_star.cli:main"

# optional (if you are making a package)
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "E501", # line-too-long
]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "SS06",
]
